# allstars

./: .gitignore  README.md  pyproject.toml  rename.py  requirements-dev.txt  requirements.txt  test.py
allstars/: cli.py  config.py  database_interface.py  utils.py
allstars.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
allstars/core/: base.py  filter.py  folder.py  join.py  metric.py  project.py  relation.py  semantic_layer.py
allstars/sql/: dialect.py  transpile.py
allstars/sql/dbapi/: cursor.py  decorators.py  types.py
estrella/: __init__.py  cli.py  config.py
estrella/core/: __init__.py  base.py  dimension.py  filter.py  folder.py  hierarchy.py  join.py  menu_items.py  metric.py  project.py  query_context.py  relation.py  semantic_layer.py
estrella/models/: __init__.py  semantic_layer.py
estrella/sql/: dialect.py  transpile.py
estrella/sql/dbapi/: __init__.py  connection.py  cursor.py  decorators.py  types.py  typing.py
examples/jaffleshop/: dimensions.yaml  folders.yaml  joins.yaml  local.bash  metrics.yaml
examples/jaffleshop/relations/: jaffleshop.customers.yaml  jaffleshop.orders.yaml  jaffleshop.raw_customers.yaml  jaffleshop.raw_orders.yaml  jaffleshop.raw_payments.yaml  jaffleshop.stg_customers.yaml  jaffleshop.stg_orders.yaml  jaffleshop.stg_payments.yaml
schemas/: semantic_layer.py
tests/: conftest.py
tests/sql/: test.db  transpile_tests.py
