[project]
name = "allstars"
version = "0.0.1"
description = "A Mostly Inferred + Progressively Adoptable Semantic Layer"
readme = "README.md"
authors = [{name = "Maxime Beauchemin"}, {name = "Beto Dealmeida"}]
license = {text = "All rights reserved."}
classifiers = [
]
dependencies = [
    "pydantic",
]
requires-python = ">3.7"
scripts = {allstars = "allstars.cli:run"}

[project.urls]
homepage = "https://github.com/preset-io/allstars"
Changelog = "https://github.com/preset-io/allstars/releases"
Issues = "https://github.com/preset-io/allstars/issues"
CI = "https://github.com/preset-io/allstars/actions"

[project.optional-dependencies]
test = ["pytest"]
dev = ["Flake8-pyproject"]

[project.entry-points."sqlalchemy.dialects"]
allstars = "allstars.sql.dialect:allstarsDialect"

[tool.flake8]
max-line-length = 90
